This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Python/symtable.c: warning: enumeration value ‘FunctionType_kind’ not handled in switch [-Wswitch]"
Type: Stage: resolved
Components: Interpreter Core Versions: Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: emilyemorehouse, gvanrossum, levkivskyi, vstinner
Priority: normal Keywords: patch, patch, patch

Created on 2019-02-11 11:31 by vstinner, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 11821 merged gvanrossum, 2019-02-11 16:18
PR 11821 merged gvanrossum, 2019-02-11 16:18
PR 11821 merged gvanrossum, 2019-02-11 16:18
Messages (4)
msg335207 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-02-11 11:31
On x86 Gentoo Installed with X 3.x buildbot, there is a compiler warning:  

"Python/symtable.c:289:5: warning: enumeration value ‘FunctionType_kind’ not handled in switch [-Wswitch]"

https://buildbot.python.org/all/#/builders/103/builds/2067

It might me related to the implementation of the PEP 572 (bpo-35224), but I'm not sure.

See also bpo-35878.
msg335236 - (view) Author: Guido van Rossum (gvanrossum) * (Python committer) Date: 2019-02-11 16:14
Sure, I'll fix it.
msg335264 - (view) Author: Guido van Rossum (gvanrossum) * (Python committer) Date: 2019-02-11 19:34
New changeset 522346d792d9013140a3f4ad3534ac10f38d9085 by Guido van Rossum in branch 'master':
Complete switch cases in symtable.c; fixes bpo-35963 (GH-11821)
https://github.com/python/cpython/commit/522346d792d9013140a3f4ad3534ac10f38d9085
msg335265 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-02-11 19:57
Thanks for the fix, Guido ;-)
History
Date User Action Args
2022-04-11 14:59:11adminsetgithub: 80144
2019-02-12 00:27:46gvanrossumsetkeywords: patch, patch, patch
stage: resolved
2019-02-12 00:10:08gvanrossumsetstage: resolved -> (no value)
2019-02-11 19:57:33vstinnersetkeywords: patch, patch, patch

messages: + msg335265
2019-02-11 19:34:56gvanrossumsetstatus: open -> closed
resolution: fixed
messages: + msg335264

stage: patch review -> resolved
2019-02-11 16:18:50gvanrossumsetkeywords: + patch
stage: patch review
pull_requests: + pull_request11850
2019-02-11 16:18:43gvanrossumsetkeywords: + patch
stage: (no value)
pull_requests: + pull_request11849
2019-02-11 16:18:37gvanrossumsetkeywords: + patch
stage: (no value)
pull_requests: + pull_request11848
2019-02-11 16:14:31gvanrossumsetmessages: + msg335236
2019-02-11 11:58:20rhettingersetnosy: + gvanrossum
2019-02-11 11:31:24vstinnercreate