Complete switch cases in symtable.c; fixes bpo-35963 (GH-11821)